abstract and timeline

--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -126,12 +126,11 @@
 \printAffiliationsAndNotice{\icmlEqualContribution} % otherwise use the standard text.
 
 \begin{abstract}
-We plan to investigate route-level bicycle crash risk in Berlin by addressing a key limitation in current safety analyses: raw crash counts don't distinguish 
-between dangerous roads and simply busy roads. Our approach will combine police-recorded crash data from the German Unfallatlas with recent city-wide traffic 
-volume estimates to calculate a normalized risk metric at the street-segment level. The core idea is to identify which segments have high crash rates per cyclist 
-rather than just high absolute crash numbers. We will then explore how to aggregate these segment-level risks into route-level scores that could inform safer 
-cycling navigation. Key challenges we anticipate include dealing with potential under-reporting in the crash data and uncertainty in the traffic volume estimates, 
-though we haven't yet determined the best validation approach for this. 
+We plan to investigate route-level bicycle crash risk in Berlin by addressing a key limitation in current safety analyses: raw crash counts don't distinguish between dangerous roads and simply 
+busy roads. Our approach will combine police-recorded crash data from the German Unfallatlas with recent city-wide traffic volume estimates to calculate a normalized risk metric at the 
+street-segment level. The core idea is to identify which segments have high crash rates per cyclist rather than just high absolute crash numbers. We will then explore how to aggregate these 
+segment-level risks into route-level scores that could inform safer cycling navigation. Building on this, we aim to score a user-specified route and, where possible, recommend alternative routes 
+with lower estimated risk while maintaining comparable convenience (e.g., distance or travel time).
 \end{abstract}
 
 \section{Introduction}\label{sec:intro}
