added simple heatmap and map with accidents

--- a/visualization_accident_data.ipynb
+++ b/visualization_accident_data.ipynb
@@ -30,12 +30,13 @@
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import folium"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "0b235a40",
    "metadata": {},
    "outputs": [
@@ -242,7 +243,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +257,7 @@
     "\n",
     "dfs = []\n",
     "for fp in csv_files:\n",
-    "    df = pd.read_csv(fp, low_memory=False, delimiter=\";\")\n",
+    "    df = pd.read_csv(fp, low_memory=False, delimiter=\";\", decimal=\",\")\n",
     "    df[\"source_file\"] = fp.name \n",
     "    dfs.append(df)\n",
     "\n",
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "3dfbe71f",
    "metadata": {},
    "outputs": [
@@ -485,7 +486,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b0f5b578",
    "metadata": {},
    "outputs": [
@@ -534,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "d3660605",
    "metadata": {},
    "outputs": [
@@ -564,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "1b055321",
    "metadata": {},
    "outputs": [
@@ -600,11 +601,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ce83c68a",
+   "execution_count": 17,
+   "id": "725a80b5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# map accident locations using folium\n",
+    "map_center = [52.52, 13.405]  # Center of Berlin\n",
+    "accident_map = folium.Map(location=map_center, zoom_start=12) \n",
+    "for _, row in df_bike_berlin.iterrows():\n",
+    "    lat = row['YGCSWGS84']  \n",
+    "    lon = row['XGCSWGS84']  \n",
+    "    if pd.notnull(lat) and pd.notnull(lon):\n",
+    "        folium.CircleMarker(\n",
+    "            location=[lat, lon],\n",
+    "            radius=1.5,\n",
+    "            color='blue',\n",
+    "            fill=True,\n",
+    "            fill_color='blue',\n",
+    "            fill_opacity=0.6\n",
+    "        ).add_to(accident_map)\n",
+    "accident_map.save(\"bicycle_accidents_berlin.html\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "535941d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create heat map of accident locations\n",
+    "from folium.plugins import HeatMap  \n",
+    "heat_data = df_bike_berlin[[\"YGCSWGS84\", \"XGCSWGS84\"]].values.tolist()\n",
+    "m = folium.Map(location=[52.5200, 13.4050], zoom_start=15)\n",
+    "HeatMap(heat_data, radius=15).add_to(m)\n",
+    "m.save(\"bicycle_accidents_heatmap_berlin.html\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6236ee7d",
+   "metadata": {},
+   "source": [
+    "## To Do:\n",
+    "* look into map visualization, create heatmap of accident locations\n",
+    "* find out how many accidents are in segments covered by bike counting stations"
+   ]
   }
  ],
  "metadata": {
