adding segments to accident data

--- a/visualization_accident_data.ipynb
+++ b/visualization_accident_data.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "d37acbb5",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,8 @@
     "import matplotlib.pyplot as plt\n",
     "import folium\n",
     "from folium.plugins import HeatMap\n",
-    "import pyarrow as pa  \n"
+    "import geopandas as gpd\n",
+    "import shapely"
    ]
   },
   {
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0b235a40",
    "metadata": {},
    "outputs": [
@@ -203,7 +204,7 @@
          "type": "float"
         }
        ],
-       "ref": "a72facb5-c626-48b5-b5cb-eb8a88a05861",
+       "ref": "473e263f-bec6-4964-95ca-43570a4f3b6d",
        "rows": [
         [
          "0",
@@ -561,7 +562,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "3dfbe71f",
    "metadata": {},
    "outputs": [
@@ -746,7 +747,7 @@
          "type": "float"
         }
        ],
-       "ref": "da20fea1-1e5f-43e0-a160-b3c7ccb1f3ee",
+       "ref": "26d75f3c-2b55-4f5a-b188-197bf420937e",
        "rows": [
         [
          "307975",
@@ -1104,7 +1105,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b0f5b578",
    "metadata": {},
    "outputs": [
@@ -1170,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "d3660605",
    "metadata": {},
    "outputs": [
@@ -1208,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "1b055321",
    "metadata": {},
    "outputs": [
@@ -1256,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b6175b49",
    "metadata": {},
    "outputs": [
@@ -1315,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "852ac8f6",
    "metadata": {},
    "outputs": [
@@ -1376,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "725a80b5",
    "metadata": {},
    "outputs": [],
@@ -1402,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "535941d3",
    "metadata": {},
    "outputs": [],
@@ -1424,41 +1425,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c8b4bb11",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ArrowKeyError",
-     "evalue": "A type extension with name pandas.period already defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mArrowKeyError\u001b[39m                             Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# import berlin_data.parquet file\u001b[39;00m\n\u001b[32m      2\u001b[39m strava_segments_berlin = Path(\u001b[33m\"\u001b[39m\u001b[33mdata/parquet/berlin_data.parquet\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m strava_segments = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_parquet\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstrava_segments_berlin\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\grasl\\Documents\\Studium\\Master\\WS_25_26\\Data_Literacy_Project\\data_literacy\\.venv\\Lib\\site-packages\\pandas\\io\\parquet.py:653\u001b[39m, in \u001b[36mread_parquet\u001b[39m\u001b[34m(path, engine, columns, storage_options, use_nullable_dtypes, dtype_backend, filesystem, filters, **kwargs)\u001b[39m\n\u001b[32m    500\u001b[39m \u001b[38;5;129m@doc\u001b[39m(storage_options=_shared_docs[\u001b[33m\"\u001b[39m\u001b[33mstorage_options\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m    501\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mread_parquet\u001b[39m(\n\u001b[32m    502\u001b[39m     path: FilePath | ReadBuffer[\u001b[38;5;28mbytes\u001b[39m],\n\u001b[32m   (...)\u001b[39m\u001b[32m    510\u001b[39m     **kwargs,\n\u001b[32m    511\u001b[39m ) -> DataFrame:\n\u001b[32m    512\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    513\u001b[39m \u001b[33;03m    Load a parquet object from the file path, returning a DataFrame.\u001b[39;00m\n\u001b[32m    514\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    650\u001b[39m \u001b[33;03m    1    4    9\u001b[39;00m\n\u001b[32m    651\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m653\u001b[39m     impl = \u001b[43mget_engine\u001b[49m\u001b[43m(\u001b[49m\u001b[43mengine\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    655\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m use_nullable_dtypes \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m lib.no_default:\n\u001b[32m    656\u001b[39m         msg = (\n\u001b[32m    657\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mThe argument \u001b[39m\u001b[33m'\u001b[39m\u001b[33muse_nullable_dtypes\u001b[39m\u001b[33m'\u001b[39m\u001b[33m is deprecated and will be removed \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    658\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33min a future version.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    659\u001b[39m         )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\grasl\\Documents\\Studium\\Master\\WS_25_26\\Data_Literacy_Project\\data_literacy\\.venv\\Lib\\site-packages\\pandas\\io\\parquet.py:64\u001b[39m, in \u001b[36mget_engine\u001b[39m\u001b[34m(engine)\u001b[39m\n\u001b[32m     62\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m engine_class \u001b[38;5;129;01min\u001b[39;00m engine_classes:\n\u001b[32m     63\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m64\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mengine_class\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     65\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[32m     66\u001b[39m         error_msgs += \u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m - \u001b[39m\u001b[33m\"\u001b[39m + \u001b[38;5;28mstr\u001b[39m(err)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\grasl\\Documents\\Studium\\Master\\WS_25_26\\Data_Literacy_Project\\data_literacy\\.venv\\Lib\\site-packages\\pandas\\io\\parquet.py:170\u001b[39m, in \u001b[36mPyArrowImpl.__init__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    167\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpyarrow\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mparquet\u001b[39;00m\n\u001b[32m    169\u001b[39m \u001b[38;5;66;03m# import utils to register the pyarrow extension types\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m170\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01marrays\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01marrow\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mextension_types\u001b[39;00m  \u001b[38;5;66;03m# pyright: ignore[reportUnusedImport] # noqa: F401\u001b[39;00m\n\u001b[32m    172\u001b[39m \u001b[38;5;28mself\u001b[39m.api = pyarrow\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\grasl\\Documents\\Studium\\Master\\WS_25_26\\Data_Literacy_Project\\data_literacy\\.venv\\Lib\\site-packages\\pandas\\core\\arrays\\arrow\\extension_types.py:59\u001b[39m\n\u001b[32m     57\u001b[39m \u001b[38;5;66;03m# register the type with a dummy instance\u001b[39;00m\n\u001b[32m     58\u001b[39m _period_type = ArrowPeriodType(\u001b[33m\"\u001b[39m\u001b[33mD\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m59\u001b[39m \u001b[43mpyarrow\u001b[49m\u001b[43m.\u001b[49m\u001b[43mregister_extension_type\u001b[49m\u001b[43m(\u001b[49m\u001b[43m_period_type\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     62\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mArrowIntervalType\u001b[39;00m(pyarrow.ExtensionType):\n\u001b[32m     63\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, subtype, closed: IntervalClosedType) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     64\u001b[39m         \u001b[38;5;66;03m# attributes need to be set first before calling\u001b[39;00m\n\u001b[32m     65\u001b[39m         \u001b[38;5;66;03m# super init (as that calls serialize)\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\grasl\\Documents\\Studium\\Master\\WS_25_26\\Data_Literacy_Project\\data_literacy\\.venv\\Lib\\site-packages\\pyarrow\\types.pxi:2226\u001b[39m, in \u001b[36mpyarrow.lib.register_extension_type\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\grasl\\Documents\\Studium\\Master\\WS_25_26\\Data_Literacy_Project\\data_literacy\\.venv\\Lib\\site-packages\\pyarrow\\error.pxi:92\u001b[39m, in \u001b[36mpyarrow.lib.check_status\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[31mArrowKeyError\u001b[39m: A type extension with name pandas.period already defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# import berlin_data.parquet file\n",
-    "strava_segments_berlin = Path(\"data/parquet/berlin_data.parquet\")\n",
-    "strava_segments = pd.read_parquet(path=str(strava_segments_berlin))"
+    "strava_segments = pd.read_parquet(path=\"data/strava_data/berlin_graph_geometry.parquet\")\n",
+    "strava_segments.head()\n",
+    "strava_segments[\"geometry\"] = strava_segments[\"geometry\"].apply(shapely.wkt.loads)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8de342e1",
+   "execution_count": 12,
+   "id": "2bd0b394",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\grasl\\Documents\\Studium\\Master\\WS_25_26\\Data_Literacy_Project\\data_literacy\\.venv\\Lib\\site-packages\\geopandas\\array.py:408: UserWarning: Geometry is in a geographic CRS. Results from 'sjoin_nearest' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ULAND</th>\n",
+       "      <th>UREGBEZ</th>\n",
+       "      <th>UKREIS</th>\n",
+       "      <th>UGEMEINDE</th>\n",
+       "      <th>UJAHR</th>\n",
+       "      <th>UMONAT</th>\n",
+       "      <th>USTUNDE</th>\n",
+       "      <th>UWOCHENTAG</th>\n",
+       "      <th>UKATEGORIE</th>\n",
+       "      <th>UART</th>\n",
+       "      <th>...</th>\n",
+       "      <th>IstGkfz</th>\n",
+       "      <th>IstSonstige</th>\n",
+       "      <th>IstStrassenzustand</th>\n",
+       "      <th>PLST</th>\n",
+       "      <th>date</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>index_right</th>\n",
+       "      <th>counter_name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>307975</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>POINT (798261.3849 5835047.2599)</td>\n",
+       "      <td>2980</td>\n",
+       "      <td>streetsegment_2980</td>\n",
+       "      <td>52.647748</td>\n",
+       "      <td>13.506298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308120</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>POINT (800551.721 5829808.4924)</td>\n",
+       "      <td>2980</td>\n",
+       "      <td>streetsegment_2980</td>\n",
+       "      <td>52.647748</td>\n",
+       "      <td>13.506298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308130</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>POINT (803320.7292 5827627.4457)</td>\n",
+       "      <td>2980</td>\n",
+       "      <td>streetsegment_2980</td>\n",
+       "      <td>52.647748</td>\n",
+       "      <td>13.506298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308149</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>POINT (798174.6913 5826939.9775)</td>\n",
+       "      <td>2980</td>\n",
+       "      <td>streetsegment_2980</td>\n",
+       "      <td>52.647748</td>\n",
+       "      <td>13.506298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308175</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>POINT (806109.6297 5821644.4035)</td>\n",
+       "      <td>2980</td>\n",
+       "      <td>streetsegment_2980</td>\n",
+       "      <td>52.647748</td>\n",
+       "      <td>13.506298</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ULAND  UREGBEZ  UKREIS  UGEMEINDE  UJAHR  UMONAT  USTUNDE  UWOCHENTAG  \\\n",
+       "307975     11        0       3          3   2018       1       15           4   \n",
+       "308120     11        0       3          3   2018       1       11           5   \n",
+       "308130     11        0       2          2   2018       1        8           2   \n",
+       "308149     11        0       1          1   2018       1       19           4   \n",
+       "308175     11        0       9          9   2018       1       18           4   \n",
+       "\n",
+       "        UKATEGORIE  UART  ...  IstGkfz  IstSonstige  IstStrassenzustand  PLST  \\\n",
+       "307975           3     6  ...      0.0          NaN                 NaN   NaN   \n",
+       "308120           3     5  ...      0.0          NaN                 NaN   NaN   \n",
+       "308130           3     5  ...      0.0          NaN                 NaN   NaN   \n",
+       "308149           3     5  ...      0.0          NaN                 NaN   NaN   \n",
+       "308175           2     5  ...      0.0          NaN                 NaN   NaN   \n",
+       "\n",
+       "             date                          geometry  index_right  \\\n",
+       "307975 2018-01-01  POINT (798261.3849 5835047.2599)         2980   \n",
+       "308120 2018-01-01   POINT (800551.721 5829808.4924)         2980   \n",
+       "308130 2018-01-01  POINT (803320.7292 5827627.4457)         2980   \n",
+       "308149 2018-01-01  POINT (798174.6913 5826939.9775)         2980   \n",
+       "308175 2018-01-01  POINT (806109.6297 5821644.4035)         2980   \n",
+       "\n",
+       "              counter_name   latitude  longitude  \n",
+       "307975  streetsegment_2980  52.647748  13.506298  \n",
+       "308120  streetsegment_2980  52.647748  13.506298  \n",
+       "308130  streetsegment_2980  52.647748  13.506298  \n",
+       "308149  streetsegment_2980  52.647748  13.506298  \n",
+       "308175  streetsegment_2980  52.647748  13.506298  \n",
+       "\n",
+       "[5 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# transform strava segments and accident locations to GeoDataFrames\n",
+    "strava_segments_gdf = gpd.GeoDataFrame(strava_segments, geometry=\"geometry\", crs=\"EPSG:4326\")\n",
+    "\n",
+    "accident_locations_gdf = gpd.GeoDataFrame(df_bike_berlin, geometry=gpd.points_from_xy(df_bike_berlin.LINREFX, df_bike_berlin.LINREFY), crs=\"EPSG:4326\")\n",
+    "\n",
+    "# join GeoDataFrames to assign segment names to accident data\n",
+    "joined = gpd.sjoin_nearest(accident_locations_gdf, strava_segments_gdf, how=\"left\")\n",
+    "joined.head()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
